Practicks/cpp/h/compiling_error.txt
/home/dima/github/OOP/Practicks/cpp/h/Programm8_2.h: In function ‘Programma8_2’:
/home/dima/github/OOP/Practicks/cpp/h/Programm8_2.h:5:3: error: unknown type name ‘ofstream’
   ofstream fout("a.txt");
   ^
/home/dima/github/OOP/Practicks/cpp/h/Programm8_2.h:5:17: error: expected declaration specifiers or ‘...’ before string constant
   ofstream fout("a.txt");
                 ^
/home/dima/github/OOP/Practicks/cpp/h/Programm8_2.h:8:3: error: ‘cin’ undeclared (first use in this function)
   cin >> c;
   ^
/home/dima/github/OOP/Practicks/cpp/h/Programm8_2.h:8:3: note: each undeclared identifier is reported only once for each function it appears in
/home/dima/github/OOP/Practicks/cpp/h/Programm8_2.h:11:3: error: ‘fout’ undeclared (first use in this function)
   fout << c;
   ^
